[실시간 통신 비교 분석] 테스트

--- a/테스트.md
+++ b/테스트.md
@@ -788,11 +788,11 @@ Long Polling :
 
 - Polling
 
-![Untitled](%E1%84%81%E1%85%B5%E1%84%8B%E1%85%A3%E1%86%BA%E1%84%92%E1%85%A9%20722a53503b694816b918c6260e8b38a4/Untitled%201.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/54bab203-23f9-4a3c-8728-25e24d1fbd71)
 
 - Long Polling
 
-![Untitled](%E1%84%81%E1%85%B5%E1%84%8B%E1%85%A3%E1%86%BA%E1%84%92%E1%85%A9%20722a53503b694816b918c6260e8b38a4/Untitled%202.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/10f48633-bfbe-41a2-be97-23b7f001c6e5)
 
 > 다음은 Spring 자체의 Heap 사용량에 대한 비교이다. 지표를 분석해보면 Long Polling이 Polling 방식에 비해 Heap 사용량이 더 많은 것을 알 수 있다.
 >
@@ -815,12 +815,11 @@ Process : 특정 프로세스가 차지하는 CPU 사용량
 >
 - Polling
 
-  ![Untitled](%E1%84%81%E1%85%B5%E1%84%8B%E1%85%A3%E1%86%BA%E1%84%92%E1%85%A9%20722a53503b694816b918c6260e8b38a4/Untitled%203.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/bd0fd9a6-0d5b-4730-9b65-a87c270243df)
 
 - WebSocket
 
-  ![Untitled](%E1%84%81%E1%85%B5%E1%84%8B%E1%85%A3%E1%86%BA%E1%84%92%E1%85%A9%20722a53503b694816b918c6260e8b38a4/Untitled%204.png)
-
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/6a79d26a-05cd-4155-952f-33beb1353557)
 
 > WebSocket이 평균적으로 Polling 방식과 비교하여 CPU 사용량이 적은 것을 알 수 있다.
 >
@@ -830,12 +829,11 @@ Process : 특정 프로세스가 차지하는 CPU 사용량
 
 - Polling
 
-  ![Untitled](%E1%84%81%E1%85%B5%E1%84%8B%E1%85%A3%E1%86%BA%E1%84%92%E1%85%A9%20722a53503b694816b918c6260e8b38a4/Untitled%205.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/9c8c6358-823a-4280-8d05-7ac16751b76c)
 
 - WebSocket
 
-  ![Untitled](%E1%84%81%E1%85%B5%E1%84%8B%E1%85%A3%E1%86%BA%E1%84%92%E1%85%A9%20722a53503b694816b918c6260e8b38a4/Untitled%206.png)
-
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/d1fba1a9-73b1-4b7b-9d35-00bad6ddfcf2)
 
 > 하지만 Spring 자체의 Heap 사용량은 WebSocket이 더 높게 측정되는 것을 알 수 있다.
 >
